# ctxmenu

./: CLAUDE.md  Cargo.toml  README.md  RELEASE_WORKFLOW_PLAN.md  TECHNICAL.md
.github/workflows/: release.yml
src/: display.rs  main.rs  registry.rs  source.rs  ui.rs
